<resources>
    <string name="app_name">Basic App</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Please write your user id</string>
    <string name="password">Please write your password</string>
    <string name="add_one">Add 1</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="insert">Insert</string>
    <string name="show">Show</string>
</resources>